# hello-sdd-chatagent

./: .gitignore  .pre-commit-config.yaml  ENV_SETUP.md  README.md  TEST_API.md  test_api.py
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml
backend/src/chatwait_backend/: __init__.py  app.py  config.py
backend/src/chatwait_backend/api/: health.py
backend/src/chatwait_backend/middleware/: logging.py
backend/src/chatwait_backend/models/: chat_models.py
backend/src/chatwait_backend/routers/: __init__.py  api.py  chat.py
backend/src/chatwait_backend/services/: chat_agent.py  llm_service.py  streaming_service.py
backend/tests/contract/: test_chat_streaming.py  test_chat_wait.py  test_error_handling.py
backend/tests/integration/: test_e2e_flow.py  test_streaming_resilience.py
backend/tests/unit/: test_chat_agent.py  test_models.py
chat-ui/: .env.example  README.md  components.json  package.json  pnpm-lock.yaml
chat-ui/app/: globals.css  layout.tsx  page.tsx
chat-ui/app/chat/: page.tsx
chat-ui/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ErrorBanner.tsx  TypingIndicator.tsx
chat-ui/hooks/: useChatStream.ts
chat-ui/tests/contract/: chat-api.test.ts
chat-ui/tests/e2e/: chat.spec.ts
chat-ui/tests/integration/: chat-flow.test.tsx
chat-ui/tests/unit/components/: ChatMessage.test.tsx
frontend/: .env.example  app.py  pyproject.toml
specs/: .env.example
specs/001-develop-a-scoped/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-develop-a-scoped/contracts/: openapi.yaml  test_chat_streaming.py  test_chat_wait.py
specs/002-user-lands-on/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-user-lands-on/contracts/: chat-api.yaml
